correcion + rides.mdj